[package]
name = "rmw_zenoh_rs"
description = "An experimental implementation of the ROS 2 RMW (ROS Middleware) layer based on Zenoh."
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
links = "type_support"
repository = "https://github.com/quadjr/rmw_zenoh_rs"

[lib]
name = "rmw_zenoh_rs"
crate-type = ["cdylib"]

[dependencies]
ament_rs = "0.2"
get_if_addrs = "0.5"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
zenoh = { version = "1.1.0", features = ["unstable"] }
zenoh-config = { version = "1.1.0", features = ["unstable"] }
zenoh-ext = { version = "1.1.0", features = ["unstable"] }
home = "=0.5.9" # Fix version to avoid rustc version error

[build-dependencies]
bindgen = "0.69.5"
cc = { version = "1.2.3", features = ["parallel"] }
cmake = "0.1"
