<package format="3">
  <name>rmw_zenoh_rs</name>
  <version>0.0.0</version>
  <description>zenoh rmw implementation written in rust</description>
  <maintainer email="kuwada.junya@gmail.com">Junya Kuwada</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>cargo</build_depend>
  <build_depend>rustc</build_depend>
  <build_depend>clang</build_depend>

  <depend>fastcdr</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosidl_typesupport_fastrtps_c</depend>
  <depend>rosidl_typesupport_fastrtps_cpp</depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
